# sighook

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: README.md
examples/inline_hook_fpregs/: main.rs
examples/instrument_adrp_with_original/: README.md  main.rs  target.c
examples/prepatched_upgrade_execute_original/: main.rs
src/: context.rs  lib.rs  memory.rs  patch_sync.rs  replay.rs  signal.rs  state.rs  trampoline.rs
src/arch/: mod.rs
src/arch/aarch64/: mod.rs
src/arch/x86_64/: decode.rs  mod.rs
src/patch/: mod.rs
src/patch/sync/: apple.rs  linux.rs  mod.rs
src/platform/: mod.rs
src/platform/apple/: cache.rs  mem.rs  mod.rs  vm.rs
src/platform/linux/: cache.rs  mem.rs  mod.rs  vm.rs
